feat: add api key and admin API
